<resources>
    <string name="app_name">My Calculator</string>
    <string name="cancel_button">C</string>
    <string name="backspace_button">Del</string>
    <string name="negative_button">+/-</string>
    <string name="percentage_button">%</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="equal_button">=</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="add_button">+</string>
    <string name="button_4">4</string>
    <string name="multiply_button">*</string>
    <string name="go_to_converter">Unit Converter</string>
    <string name="go_to_calculator">Calculator</string>
    <string name="exit_app">X</string>
    <string name="error_message">Please type a valid number</string>
    <string name="inchesID">Inches</string>
    <string name="go_to_volume">Volume</string>
    <string name="go_to_temp">Temperature</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="ml">ml</string>
    <string name="in3">in3</string>
    <string name="ft3">ft3</string>
    <string name="pt">pt</string>
    <string name="qt">qt</string>
    <string name="m3">m3</string>
    <string name="gal">gal</string>
    <string name="l">L</string>
    <string name="bbl">bbl</string>
    <string name="select_unit">Select Unit</string>
    <string name="todo">TODO</string>
    <string name="go_to_weight">Weight</string>
    <string name="go_to_length">Length</string>
    <string name="go_to_unitConversion">Unit Conversion</string>
    <string name="go_to_area">area</string>
    <string name="go_to_equations_and_functions">equations and functions</string>
    <string name="go_to_exponents">exponents</string>
    <string name="go_to_trigonometry">trigonometry</string>
    <string name="go_to_geometry">geometry</string>
    <string name="go_to_vector">vector</string>
    <string name="go_to_derivatives">derivatives</string>
    <string name="go_to_sequences">sequences</string>
    <string name="go_to_set_and_probabilities"><![CDATA[set & probabilities]]></string>
    <string name="go_to_logarithms">logarithms</string>
    <string name="go_to_complex_numbers">complex numbers</string>
    <string name="give_square">square</string>
    <string name="give_circle">circle</string>
    <string name="give_rectangle">rectangle</string>
    <string name="give_rhombus">rhombus</string>
    <string name="give_cone">cone</string>
    <string name="give_triangle">triangle</string>
    <string name="give_trapezoid">trapezoid</string>
    <string name="give_ellipse">ellipse</string>
    <string name="give_sphere">sphere</string>
    <string name="give_regular_polygon">regular polygon</string>
    <string name="give_vol_cube">Cube</string>
    <string name="give_vol_parallelepiped">Parallelepiped</string>
    <string name="give_vol_regular_prism">Regular prism</string>
    <string name="give_vol_cylinder">Cylinder</string>
    <string name="give_vol_conePyramid">Cone / pyramid</string>
    <string name="give_vol_sphere">Sphere</string>
    <string name="give_vec_magnitude">magnitude</string>
    <string name="give_vec_direction">direction</string>
    <string name="go_to_formulae">Formulae</string>

</resources>
