<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".AreaFormulae">

    <Button
        android:id="@+id/magButtonID"
        android:layout_width="98dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_square"
        app:layout_constraintBottom_toTopOf="@+id/cylinderButtonID"
        app:layout_constraintEnd_toStartOf="@+id/dirButtonID"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regprButtonID"
        android:layout_width="129dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/conePyramidButtonID"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cylinderButtonID"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_rhombus"
        app:layout_constraintBottom_toTopOf="@+id/sequencesButtonID"
        app:layout_constraintEnd_toStartOf="@+id/conePyramidButtonID"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/conePyramidButtonID"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_cone"
        app:layout_constraintBottom_toTopOf="@+id/sequencesButtonID"
        app:layout_constraintEnd_toStartOf="@+id/sphereButtonID"
        app:layout_constraintTop_toBottomOf="@+id/magButtonID"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/dirButtonID"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_circle"
        app:layout_constraintBottom_toTopOf="@+id/conePyramidButtonID"
        app:layout_constraintEnd_toStartOf="@+id/regprButtonID"
        app:layout_constraintTop_toBottomOf="@+id/resultID"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/derivativesButtonID"
        android:layout_width="177dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_ellipse"
        app:layout_constraintBottom_toTopOf="@+id/setProbabilitiesButtonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sequencesButtonID" />

    <Button
        android:id="@+id/sequencesButtonID"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_trapezoid"
        app:layout_constraintBottom_toTopOf="@+id/logarithmButtonID"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setProbabilitiesButtonID"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_regular_polygon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/logarithmButtonID"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_sphere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/setProbabilitiesButtonID"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sphereButtonID"
        android:layout_width="129dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_triangle"
        app:layout_constraintBottom_toTopOf="@+id/derivativesButtonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regprButtonID"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/resultID"
        android:layout_width="331dp"
        android:layout_height="308dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/noteTextViewID"
        android:layout_width="331dp"
        android:layout_height="147dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:id="@+id/titleTextViewID"
        android:layout_width="250dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>