<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".AreaFormulae">

    <Button
        android:id="@+id/magButtonID"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_vol_cube"
        app:layout_constraintBottom_toTopOf="@+id/cylinderButtonID"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regprButtonID"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_vol_regular_prism"
        app:layout_constraintBottom_toTopOf="@+id/sphereButtonID"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cylinderButtonID"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/give_vol_cylinder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/conePyramidButtonID"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/give_vol_conePyramid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sphereButtonID"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/cylinderButtonID" />

    <Button
        android:id="@+id/dirButtonID"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/give_vol_parallelepiped"
        app:layout_constraintBottom_toTopOf="@+id/conePyramidButtonID"
        app:layout_constraintEnd_toStartOf="@+id/regprButtonID"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/magButtonID" />

    <Button
        android:id="@+id/sphereButtonID"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/give_vol_sphere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/resultID"
        android:layout_width="331dp"
        android:layout_height="357dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/noteTextViewID"
        android:layout_width="331dp"
        android:layout_height="147dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:id="@+id/titleTextViewID"
        android:layout_width="250dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>